data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_816.wast
;; 7. **Loop Without End**:    Define a loop instruction that lacks a terminating `end` keyword, resulting in incomplete loop definition.    Constraint: Ensure that all loops have a well-formed ending structure.    Expected: Immediate rejection of loop due to syntax violation, preserving CFG consistency.

(assert_malformed
  (module quote
    "(module (func (loop))"
  )
  "unexpected end of section or function"
)